--- a/dk.html
+++ b/dk.html
@@ -24,4 +24,4 @@ For Georgiens vedkommende blev genvinding af selvstændigheden efterfulgt af en 
 En geopolitisk konflikt, der med Ruslands sikkerhedsinteresser på den ene side og den tilnærmelse Georgien sigter efter til Vesten, NATO, USA og EU, har gennem konflikter inden for Georgien som Kaukasuskrigen i 2008 vist, at Georgien igen historisk har blevet efterladt alene.
 
 Selvom Georgiens optagelse i EU måske ikke er på dagsordenen i dag, i betragtning af den nuværende politiske situation, må landet ikke overlades til sin store nabos vilkårlighed.
-Sammen ønsker dette initiativ at sende et politisk signal mod Georgien som #lostbalcony med billeder af altaner i Georgien. Georgien som kandidat til EU er et politisk tegn, og det skal ikke kun ses som et ubeskriveligt smukt .jpegaubland på kanten af ​​Europa, men som en del af Europa med en fremtid i EU.
+Sammen ønsker dette initiativ at sende et politisk signal mod Georgien som #lostbalcony med billeder af altaner i Georgien. Georgien som kandidat til EU er et politisk tegn, og det skal ikke kun ses som et ubeskriveligt smukt Urlaubland på kanten af ​​Europa, men som en del af Europa med en fremtid i EU.
