--- a/es.html
+++ b/es.html
@@ -24,4 +24,4 @@ Para Georgia, la recuperación de la independencia fue seguida por un período "
 Un conflicto geopolítico que, con los intereses de seguridad de Rusia por un lado y el acercamiento que Georgia pretende con Occidente, la OTAN, EE. se ha quedado solo.
 
 Aunque la admisión de Georgia en la UE no esté en la agenda de hoy, dada la situación política actual, el país no debe dejarse a la arbitrariedad de su gran vecino.
-Juntas, esta iniciativa quiere enviar una señal política contra Georgia como #lostbalcony con imágenes de balcones en Georgia. Georgia como candidata a la UE es un signo político y debe verse no solo como una .jpegaubsland indescriptiblemente hermosa en el borde de Europa, sino como parte de Europa con un futuro en la UE.
+Juntas, esta iniciativa quiere enviar una señal política contra Georgia como #lostbalcony con imágenes de balcones en Georgia. Georgia como candidata a la UE es un signo político y debe verse no solo como una Urlaubsland indescriptiblemente hermosa en el borde de Europa, sino como parte de Europa con un futuro en la UE.
