--- a/hr.html
+++ b/hr.html
@@ -24,4 +24,4 @@ Za Gruziju je nakon ponovnog stjecanja neovisnosti uslijedilo "mračno" razdoblj
 Geopolitički sukob koji je, uz sigurnosne interese Rusije s jedne strane i približavanje Gruzije Zapadu, NATO-u, SAD-u i EU-u, sukobima unutar Gruzije kao što je Kavkaski rat 2008. pokazao da je Gruzija još jednom povijesno ostavljen sam.
 
 Čak i ako ulazak Gruzije u EU možda danas nije na dnevnom redu, s obzirom na trenutnu političku situaciju, zemlja se ne smije prepustiti samovolji velikog susjeda.
-Ova inicijativa zajedno želi poslati politički signal protiv Gruzije kao #lostbalcony sa slikama balkona u Gruziji. Gruzija kao kandidat za EU je politički znak i treba je gledati ne samo kao neopisivo lijepu .jpegaubsland na rubu Europe, već kao dio Europe s budućnošću u EU.
+Ova inicijativa zajedno želi poslati politički signal protiv Gruzije kao #lostbalcony sa slikama balkona u Gruziji. Gruzija kao kandidat za EU je politički znak i treba je gledati ne samo kao neopisivo lijepu Urlaubsland na rubu Europe, već kao dio Europe s budućnošću u EU.
