--- a/hu.html
+++ b/hu.html
@@ -24,4 +24,4 @@ Grúzia számára a függetlenség visszaszerzését egy „sötét” időszak 
 Egy geopolitikai konfliktus, amely egyrészt Oroszország biztonsági érdekeivel és Grúzia közeledésével törekszik a Nyugathoz, a NATO-hoz, az USA-hoz és az EU-hoz, a grúziai konfliktusokon keresztül, mint a 2008-as kaukázusi háború megmutatta, hogy Grúzia történelmileg ismét egyedül maradt.
 
 Ha Grúzia EU-felvétele ma nem is kerülhet napirendre, a jelenlegi politikai helyzet ismeretében nem szabad az országot nagy szomszédja önkényére bízni.
-Ez a kezdeményezés együtt politikai jelzést kíván küldeni Grúzia ellen, mint #elveszettbalkony grúziai erkélyképekkel. Grúzia EU-jelöltként politikai jel, és nem csak egy leírhatatlanul gyönyörű .jpegaubslandként kell tekinteni Európa peremén, hanem Európa részének, amelynek jövője az EU-ban van.
+Ez a kezdeményezés együtt politikai jelzést kíván küldeni Grúzia ellen, mint #elveszettbalkony grúziai erkélyképekkel. Grúzia EU-jelöltként politikai jel, és nem csak egy leírhatatlanul gyönyörű Urlaubslandként kell tekinteni Európa peremén, hanem Európa részének, amelynek jövője az EU-ban van.
