--- a/nl.html
+++ b/nl.html
@@ -53,6 +53,6 @@ Op 16 februari 1921 werd de DRG bezet door het Rode Leger en tot eind 1991 opgen
 Een geopolitiek conflict dat, met aan de ene kant de veiligheidsbelangen van Rusland en de toenadering die Georgië tot het Westen, de NAVO, de VS en de EU nastreeft, heeft via conflicten binnen Georgië als de Kaukasusoorlog in 2008 aangetoond dat Georgië historisch gezien opnieuw alleen gelaten.</p>
 
 <p>Ook al staat de toelating van Georgië tot de EU vandaag misschien niet op de agenda, gezien de huidige politieke situatie, het land mag niet worden overgelaten aan de willekeur van zijn grote buur.<br7>
-Samen wil dit initiatief een politiek signaal afgeven tegen Georgië als #lostbalcony met foto's van balkons in Georgië. Georgië als kandidaat voor de EU is een politiek teken en moet niet alleen worden gezien als een onbeschrijfelijk mooi .jpegaubsland aan de rand van Europa, maar als onderdeel van Europa met een toekomst in de EU.</p>
+Samen wil dit initiatief een politiek signaal afgeven tegen Georgië als #lostbalcony met foto's van balkons in Georgië. Georgië als kandidaat voor de EU is een politiek teken en moet niet alleen worden gezien als een onbeschrijfelijk mooi Urlaubsland aan de rand van Europa, maar als onderdeel van Europa met een toekomst in de EU.</p>
 </body>
 </html>
