--- a/pt.html
+++ b/pt.html
@@ -24,4 +24,4 @@ Para a Geórgia, a recuperação da independência foi seguida por um período "
 Um conflito geopolítico que, com os interesses de segurança da Rússia por um lado e a aproximação que a Geórgia pretende com o Ocidente, a NATO, os EUA e a UE, demonstrou através de conflitos no interior da Geórgia como a Guerra do Cáucaso em 2008 que a Geórgia voltou a foi deixado sozinho.
 
 Mesmo que a admissão da Geórgia na UE não esteja na agenda hoje, dada a atual situação política, o país não deve ser deixado à arbitrariedade de seu grande vizinho.
-Juntos, esta iniciativa quer enviar um sinal político contra a Geórgia como #lostbalcony com fotos de varandas na Geórgia. A Geórgia como candidata à UE é um sinal político e deve ser vista não apenas como uma .jpegaubsland indescritivelmente bela na fronteira da Europa, mas como parte da Europa com futuro na UE.
+Juntos, esta iniciativa quer enviar um sinal político contra a Geórgia como #lostbalcony com fotos de varandas na Geórgia. A Geórgia como candidata à UE é um sinal político e deve ser vista não apenas como uma Urlaubsland indescritivelmente bela na fronteira da Europa, mas como parte da Europa com futuro na UE.
