--- a/se.html
+++ b/se.html
@@ -24,4 +24,4 @@ För Georgiens del följdes återtagandet av självständighet av en "mörk" per
 En geopolitisk konflikt som, med Rysslands säkerhetsintressen å ena sidan och det närmande Georgien siktar på till väst, Nato, USA och EU, har genom konflikter inom Georgien som Kaukasuskriget 2008 visat att Georgien återigen historiskt sett har lämnats ensam.
 
 Även om Georgiens inträde i EU kanske inte står på agendan i dag, med tanke på den nuvarande politiska situationen, får landet inte överlåtas åt sin stora grannes godtycke.
-Tillsammans vill detta initiativ skicka en politisk signal mot Georgien som #lostbalkong med bilder på balkonger i Georgien. Georgien som kandidat till EU är ett politiskt tecken och det bör inte bara ses som ett obeskrivligt vackert .jpegaubland i utkanten av Europa, utan som en del av Europa med en framtid i EU.
+Tillsammans vill detta initiativ skicka en politisk signal mot Georgien som #lostbalkong med bilder på balkonger i Georgien. Georgien som kandidat till EU är ett politiskt tecken och det bör inte bara ses som ett obeskrivligt vackert Urlaubland i utkanten av Europa, utan som en del av Europa med en framtid i EU.
