--- a/impressum.html
+++ b/impressum.html
@@ -28,7 +28,7 @@ body p {
 <h2>Impressum</h2>
 
 <h4>Informationspflicht laut &sect; 5 TMG</h4>
-<p>persoenliches-georgien.de<br /><br />
+<p>lostbalcony.eu ist eine Online-Initiative von <a href="https://persoenliches-georgien.de" target="_blank">persoenliches-georgien.de</a><br /><br />
 Eka Schanne<br />
 Neue Landstr. 2a<br />
 76761 R&uuml;lzheim</p>
