--- a/nl.html
+++ b/nl.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Deutsch</title>
+  <title>Nederlands</title>
   <link rel="stylesheet" href="css/main.css">
   <style>
 body {
@@ -27,9 +27,9 @@ body p {
 <body>
 <h2>missie</h2>
 
-<p><span style="font-family: weathers; font-size: 22px;">#lostbalcony</span> is een online initiatief dat waarschuwt voor het verlies van Georgië als het balkon van Europa. Het risico dat Georgië in 2022, in de nasleep van een wrede oorlog in Oekraïne, zijn aspiraties om lid te worden van de Europese Unie (EU) zal vergeten, zou een historische vergissing zijn. Net als Oekraïne en Moldavië maakt Georgië deel uit van Europa.</p>
+<p><span style="font-family: weathers; font-size: 22px;">#lostbalcony</span> is een online initiatief dat waarschuwt voor het verlies van Georgië als het balkon van Europa. Georgië wordt vaak het "balkon van Europa" genoemd vanwege zijn ligging aan de rand van Europa, tussen Europa en Azië, en heeft nauwe historische banden met Europa.</p>
 
-<p>Georgië wordt vaak het "balkon van Europa" genoemd vanwege zijn ligging aan de rand van Europa, tussen Europa en Azië, en heeft nauwe historische banden met Europa.</p>
+<p>Het risico dat Georgië in 2022, in de nasleep van een wrede oorlog in Oekraïne, zijn aspiraties om lid te worden van de Europese Unie (EU) zal vergeten, zou een historische vergissing zijn. Net als Oekraïne en Moldavië maakt Georgië deel uit van Europa.</p>
 
 <p><a href="https://persoenliches-georgien.de/tipps_ursprung.html" target="_blank"><img src="img/mission/schaedel_wein.png" width="160" align=right style="margin-left: 10px;" alt="" title="Homo georgicus - der erste europäische Winzer" /></a> De verspreiding van Homo erectus van Afrika naar Europa is bewezen door huidige opgravingen in Georgië. Deze laten zien hoe vroege mensen 2 miljoen jaar geleden in Dmanisi - in het zuiden van Georgië - te vinden zijn.
 Een andere vorm van Europees cultureel erfgoed is de wijnbouw, die een lange traditie heeft in Georgië en teruggaat tot 6000 jaar voor Christus. Chr. heeft sporen achtergelaten. Opgravingen tonen de teelt van gecultiveerde wijnstokken, die vandaag de dag nog steeds worden verbouwd.</p>
@@ -39,18 +39,18 @@ Een andere vorm van Europees cultureel erfgoed is de wijnbouw, die een lange tra
 <p>Georgië heeft altijd een hechte relatie met Europa gezocht en de voormalige zwakke geostrategische redenen zouden in de 21e eeuw moeten worden vervangen:</p>
 
 <p><table border="0"><tr>
-<td><a href="https://de.wikipedia.org/wiki/Sulchan-Saba_Orbeliani" target="_blank"><img src="img/mission/Sulchan-Saba_Orbeliani.jpg" height="140" align=left style="margin-right: 10px;" alt="" title="Sulchan-Saba Orbeliani"/></a>Al tussen 1713 en 1716 bezocht Sulhan-Zaba Orbeliani, een Georgische prins, monnik, diplomaat en schrijver, namens de Georgische koning de paus en de Franse koning Lodewijk XIV om Georgië met West-Europa te verbinden. Ook de buitenlandse politiek van de latere koning Erekle II (7 november 1720 – 11 januari 1798) was sterk Europees georiënteerd. Hij zocht allianties met verschillende Europese regeringen tegen Perzië en het Ottomaanse Rijk, maar vond geen steun.</td>
+<td><a href="https://nl.wikipedia.org/wiki/Soelsjan-Saba_Orbeliani" target="_blank"><img src="img/mission/Sulchan-Saba_Orbeliani.jpg" height="140" align=left style="margin-right: 10px;" alt="" title="Sulchan-Saba Orbeliani"/></a>Al tussen 1713 en 1716 bezocht <a href="https://nl.wikipedia.org/wiki/Soelsjan-Saba_Orbeliani" target="_blank">Sulhan-Zaba Orbeliani</a>, een Georgische prins, monnik, diplomaat en schrijver, namens de Georgische koning de paus en de Franse koning Lodewijk XIV om Georgië met West-Europa te verbinden. Ook de buitenlandse politiek van de latere koning Erekle II (7 november 1720 – 11 januari 1798) was sterk Europees georiënteerd. Hij zocht allianties met verschillende Europese regeringen tegen Perzië en het Ottomaanse Rijk, maar vond geen steun.</td>
 <td style="width: 5%;">&nbsp;</td>
-<td><a href="https://de.wikipedia.org/wiki/Erekle_II." target="_blank"><img src="img/mission/Heraclius_II_of_Eastern_Georgia.jpg" height="140" align=right style="margin-left: 10px;" alt="" title="Erekle II."/></a>Pas in 1783 tekende koning Erekle II een verdrag met de Russische tsarina Catharina II om hem te beschermen tegen de Perzische horde en zijn troepen, waarin hij zich ertoe verbonden het Russische protectoraat te erkennen en zijn strijdkrachten in dienst te stellen van de Russische Rijk.
+<td><a href="https://nl.wikipedia.org/wiki/Heraclius_II" target="_blank"><img src="img/mission/Heraclius_II_of_Eastern_Georgia.jpg" height="140" align=right style="margin-left: 10px;" alt="" title="Erekle II."/></a>Pas in 1783 tekende <a href="https://nl.wikipedia.org/wiki/Heraclius_II" target="_blank">koning Erekle II</a> een verdrag met de Russische tsarina Catharina II om hem te beschermen tegen de Perzische horde en zijn troepen, waarin hij zich ertoe verbonden het Russische protectoraat te erkennen en zijn strijdkrachten in dienst te stellen van de Russische Rijk.
 Bij de Slag bij Krtsanisi moest Georgië het echter alleen opnemen tegen de Perzen zonder Russische steun, en de Georgiërs werden verslagen.
 </td>
 </tr></table>
-<p><a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien" target="_blank"><img src="img/mission/Flag_of_Georgia_(1918–1921).svg.png" width="140" align=left style="margin-top:10px; margin-right: 10px;" alt="" title="Flagge der DRG"/></a>Maar omdat Rusland in de 19e eeuw zijn invloedssfeer in de zuidelijke Kaukasus verder kon uitbreiden, was een onafhankelijke Georgische staat onmogelijk.<br/>
-Pas bij de ineenstorting van het Russische rijk in de Februarirevolutie van 1917 werd in 1918-1921 de eerste Democratische Republiek Georgië (DRG) opgericht.<br/>
-Op 16 februari 1921 werd de DRG bezet door het Rode Leger en tot eind 1991 opgenomen in de Sovjet-Unie als de Georgische Socialistische Sovjetrepubliek.</p>
+<p><a href="https://de.wikipedia.org/wiki/Demokratische_Republik_Georgien" target="_blank"><img src="img/mission/Flag_of_Georgia_(1918–1921).svg.png" width="140" align=left style="margin-top:10px; margin-right: 10px;" alt="" title="Flagge der DRG"/></a>Maar omdat Rusland <a href="https://youtu.be/K34XQUzrrpI?t=851" target="_blank">in de 19e eeuw</a> zijn invloedssfeer in de zuidelijke Kaukasus verder kon uitbreiden, was een onafhankelijke Georgische staat onmogelijk.<br/>
+Pas bij de ineenstorting van het Russische rijk in de Februarirevolutie van 1917 werd in 1918-1921 de eerste <a href="https://nl.wikipedia.org/wiki/Democratische_Republiek_Georgi%C3%AB" target="_blank">Democratische Republiek Georgië</a> (DRG) opgericht.<br/>
+Op 16 februari 1921 werd de DRG bezet door het Rode Leger en tot eind 1991 opgenomen in de <a href="https://nl.wikipedia.org/wiki/Sovjet-Unie" target="_blank">Sovjet-Unie</a> als de <a href="https://nl.wikipedia.org/wiki/Georgische_Socialistische_Sovjetrepubliek" target="_blank">Georgische Socialistische Sovjetrepubliek</a>.</p>
 
 <p><img src="img/mission/Flag_of_Georgia.svg.png" width="140" align=right style="margin-top:10px; margin-left: 10px;" alt="" title="Flagge Georgiens"/>Voor Georgië werd het herwinnen van de onafhankelijkheid gevolgd door een "donkere" periode met verkiezingsfraude, wijdverbreide corruptie, misdaad en stagnatie van de economie op een zeer laag niveau, maar sinds de jaren 2000 is de wens om onomkeerbaar onafhankelijk te worden van Rusland in Georgië's buitenlandse beleid maken.<br/>
-Een geopolitiek conflict dat, met aan de ene kant de veiligheidsbelangen van Rusland en de toenadering die Georgië tot het Westen, de NAVO, de VS en de EU nastreeft, heeft via conflicten binnen Georgië als de Kaukasusoorlog in 2008 aangetoond dat Georgië historisch gezien opnieuw alleen gelaten.</p>
+Een geopolitiek conflict dat, met aan de ene kant de veiligheidsbelangen van Rusland en de toenadering die Georgië tot het Westen, de NAVO, de VS en de EU nastreeft, heeft via conflicten binnen Georgië als de <a href="https://nl.wikipedia.org/wiki/Oorlog_in_Zuid-Osseti%C3%AB_(2008)" target="_blank">Kaukasusoorlog in 2008</a> aangetoond dat Georgië historisch gezien opnieuw alleen gelaten.</p>
 
 <p>Ook al staat de toelating van Georgië tot de EU vandaag misschien niet op de agenda, gezien de huidige politieke situatie, het land mag niet worden overgelaten aan de willekeur van zijn grote buur.<br7>
 Samen wil dit initiatief een politiek signaal afgeven tegen Georgië als #lostbalcony met foto's van balkons in Georgië. Georgië als kandidaat voor de EU is een politiek teken en moet niet alleen worden gezien als een onbeschrijfelijk mooi Urlaubsland aan de rand van Europa, maar als onderdeel van Europa met een toekomst in de EU.</p>
